--- a/index.html
+++ b/index.html
@@ -15,11 +15,28 @@
             <h1>Welcome To</h1>
             <h1><span class="name-highlight">Tasnim Aman's</span> Website</h1>
             <h3>Baby Web Developer</h3>
-            <p>This is Tasnim Aman Nilav. I learnt html,css and github last few days. I feel confidant that i can. In Sha Allah i can reach my goal. I want to be Full Stack web developer and Software Engeneer. I am basscally from Bangladesh</p>
+            <p>This is Tasnim Aman Nilav. I learnt html,css and github last few days. I feel confidant that i can. In Sha Allah i can reach my goal. I want to be Full Stack web developer and Software Engeneer. I am basscally from Bangladesh.</p>
+            
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/tasnim-aman-b46350175/">HIRE ME</a>
         </div>
 
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+
+
+
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a World Class Web Developer</h3>
+            <p>This is Tasnim Aman Nilav. I learnt html,css and github last few days. I feel confidant that i can. In Sha Allah i can reach my goal. I want to be Full Stack web developer and Software Engeneer. I am basscally from Bangladesh.</p>
+            
         </div>
     </section>
 
