--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Tasnim Aman's</span> Website</h1>
+            <h1><span class="name-highlight">Tasnim</span> Website</h1>
             <h3>Baby Web Developer</h3>
             <p>This is Tasnim Aman Nilav. I learnt html,css and github last few days. I feel confidant that i can. In Sha Allah i can reach my goal. I want to be Full Stack web developer and Software Engeneer. I am basscally from Bangladesh.</p>
             
@@ -36,6 +36,7 @@
             <h2>Dream Big</h2>
             <h3>Become a World Class Web Developer</h3>
             <p>This is Tasnim Aman Nilav. I learnt html,css and github last few days. I feel confidant that i can. In Sha Allah i can reach my goal. I want to be Full Stack web developer and Software Engeneer. I am basscally from Bangladesh.</p>
+            <a class="link-button" target="_blank" href="https://github.com/TasnimAman/web-portfolio"> DOWNLOAD RESUME</a>
             
         </div>
     </section>
