complete mt firstproject with jhankar vai

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Tasnim</span> Website</h1>
+            <h1><span class="orange-highlight">Tasnim</span> Website</h1>
             <h3>Baby Web Developer</h3>
             <p>This is Tasnim Aman Nilav. I learnt html,css and github last few days. I feel confidant that i can. In Sha Allah i can reach my goal. I want to be Full Stack web developer and Software Engeneer. I am basscally from Bangladesh.</p>
             
@@ -41,5 +41,23 @@
         </div>
     </section>
 
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width singel-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-highlight">2020-Present | Pro Level Developer</h3>
+            <p>I am master in html,css,javascript,djano,nodeJs,viewJs,react,angular. I am bassically a Full Stack Developer. But i have more than 5 years experience in this sector. Before that i was a Graphics Designer. But I love coding thats why i am here.</p>
+        </div>
+            
+        <div id="baby-web" class="half-width singel-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020-2021 | Programming Hero Larner</h3>
+            <p>I am master in html,css,javascript,djano,nodeJs,viewJs,react,angular. I am bassically a Full Stack Developer. But i have more than 5 years experience in this sector. Before that i was a Graphics Designer. But I love coding thats why i am here.</p>
+        </div>
+    </section>
+
+    <footer>
+        @ tasnim_aman 2021, all rights reserved
+    </footer>
 </body>
 </html>
